# MavenAutoPrimer

./: .gitignore  CMakeLists.txt  README.md  check_hf_access.py  cp.txt  pom.xml
src/main/java/: AboutController.java  AutoPrimer3A.java  CoordComparator.java  GeneSearchResult.java  GenomicRegionSummary.java  GetEnsemblGeneCoordinates.java  GetGeneCoordinates.java  GetUcscGeneCoordinates.java  MainApplication.java  Primer3ResultViewController.java  RefactorAutoPrimer3A.java  ReverseComplementDNA.java  SequenceFromDasUcsc.java
src/main/java/com/github/: ApplicationConfig.java  BuildToMisprimingLibrary.java  ChromosomeComparator.java  DnaReverseComplementer.java  FastaSequenceRetriever.java  GeneDetailsModel.java  GetUcscBuildsAndTables.java  GetUcscGeneCoordinates.java  RegionParser.java  controllers.java
src/main/java/com/github/mavenautoprimer/: AboutDialogController.java  ApplicationConfig.java  ApplicationMain.java  AutoPrimerApplication.java  AutoPrimerRefactorer.java  ChromosomeComparator.java  ControllerRegistry.java  CoordinateComparator.java  DasUcscSequenceFetcher.java  DnaReverseComplementer.java  EnsemblGeneCoordinatesFetcher.java  FastaSequenceRetriever.java  GeneCoordinatesFetcher.java  GeneDetails.java  GeneDetailsModel.java  GeneSearchResultModel.java  GenomicBase.java  GenomicRegionParser.java  GenomicRegionSummaryModel.java  GetUcscBuildsAndTables.java  MisprimingLibraryBuilder.java  Primer3ResultViewController.java  Primer3ResultsController.java  UcscBuildAndTableFetcher.java  UcscGeneCoordinatesFetcher.java
src/main/resources/: AutoPrimer3A.fxml  AutoPrimer3AMac.fxml  AutoPrimerApplicationMac.fxml  Primer3ResultView.fxml  Primer3ResultViewMac.fxml  Primer3ResultsViewMac.fxml  about.fxml
src/main/resources/fxml/: AboutDialog.fxml  MavenAutoPrimer.fxml  Primer3ResultsView.fxml
src/main/resources/reports/: MavenAutoPrimerTroubles_Java_Superclass_Annotator60.sh.txt
src/main/resources/temp/: AboutDialogController_stripped.java  ApplicationConfig_stripped.java  ApplicationMain_stripped.java  ChromosomeComparator_stripped.java  CoordinateComparator_stripped.java  DasUcscSequenceFetcher_stripped.java  DnaReverseComplementer_stripped.java  EnsemblGeneCoordinatesFetcher_stripped.java  FastaSequenceRetriever_stripped.java  GeneCoordinatesFetcher_stripped.java  GeneDetails_stripped.java  GeneSearchResultModel_stripped.java  GenomicBase_stripped.java  GenomicRegionParser_stripped.java  GenomicRegionSummaryModel_stripped.java  MisprimingLibraryBuilder.java  Primer3ResultViewController_stripped.java  Primer3ResultsController.java  UcscBuildAndTableFetcher.java  UcscBuildAndTableFetcher_stripped.java  UcscGeneCoordinatesFetcher.java  UcscGeneCoordinatesFetcher_stripped.java  duplicate_constructor_locations.txt  duplicate_constructors.txt  punctuation_summary.txt
src/main/resources/tools/: Hello_world_run_codellama.py  Java_Superclass_Annotator25.sh  Java_Superclass_Annotator25_formodification.sh  Java_Superclass_Annotator34.sh  Java_Superclass_Annotator47.sh  Java_Superclass_Annotator50.sh  Java_Superclass_Annotator51.sh  Java_Superclass_Annotator60.sh  Large_chunks.py  MavenSwitches.txt  RHEL8_Java_Superclass_Annotator36.sh  RHEL8_maven_clean_compile.txt  check_and_indent.sh  chunked_processing_for_all_files.py  chunked_processing_version.py  compare_mispriming.sh  compare_overviews.sh  extract_overview.sh  java_analysis.sh  new_java_analysis.sh  refactor_java_files_for_git.sh  refactor_maven_auto_primer.sh  rename_classes.sh  rename_resources.sh  replace_java_files_with_fixed.sh  run_codellama.py  smaller_chunks.py
src/main/resources/work/: compare_mispriming.sh  compare_overviews.sh  refactor_java_files_for_git.sh
